Able to download spreadsheet with mock data

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
   Hello World!
-  <button>Download JSON</button>
+  <form method="get" action="/api/teachable-hook">
+  <button type="submit">Download CSV!</button>
+  </form>
+<!--   <button>Download JSON</button>
   <script>
     $(document).ready( function() {
       var largeArray;
@@ -18,6 +21,6 @@
         });
       });
     });
-  </script>
+  </script> -->
 </body>
 </html>
