Auth mvp created

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 </head>
 <body>
-  <form action="/api/test" method="post">
+  <form action="/api/login" method="post">
     Username<br>
     <input type="text" name="username" placeholder="username">
     <br>
